@@ -151,8 +151,8 @@ AC_DEFUN([AC_CHECK_FUNC_MKDIR],
   [AC_MSG_FAILURE(
    [Missing function: mkdir],
    [1])
+  ])
  ])
-])
 
 dnl Function to detect if libsystem dependencies are available
 AC_DEFUN([AC_CHECK_LOCAL_LIBSYSTEM],
@@ -183,86 +183,76 @@ AC_DEFUN([AC_CHECK_LOCAL_LIBSYSTEM],
  AC_CHECK_HEADERS([signal.h sys/signal.h])
 
  dnl File input/output functions used in libsystem/libsystem_file_io.h
- AC_CHECK_FUNCS(
-  [close],
-  [],
+ AC_CHECK_FUNCS([close fstat ftruncate lseek open read stat write])
+
+ AS_IF(
+  [test "x$ac_cv_func_close" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: close],
    [1])
   ])
  
- AC_CHECK_FUNCS(
-  [fstat],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_fstat" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: fstat],
    [1])
   ])
  
- AC_CHECK_FUNCS(
-  [ftruncate],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_ftruncate" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: ftruncate],
    [1])
   ])
  
- AC_CHECK_FUNCS(
-  [lseek],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_lseek" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: lseek],
    [1])
   ])
  
- AC_CHECK_FUNCS(
-  [open],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_open" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: open],
    [1])
   ])
  
- AC_CHECK_FUNCS(
-  [read],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_read" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: read],
    [1])
   ])
  
- AC_CHECK_FUNCS(
-  [stat],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_stat" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: stat],
    [1])
   ])
  
- AC_CHECK_FUNCS(
-  [write],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_write" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: write],
    [1])
   ])
 
  dnl Date and time functions used in libsystem/libsystem_date_time.c
- AC_CHECK_FUNCS(
-  [localtime_r],
-  [],
-  [AC_CHECK_FUNCS(
-   [localtime],
-   [],
-   [AC_MSG_FAILURE(
-    [Missing functions: localtime_r and localtime],
-    [1])
-   ])
+ AC_CHECK_FUNCS([localtime localtime_r mktime])
+
+ AS_IF(
+  [test "x$ac_cv_func_localtime" != xyes && test "x$ac_cv_func_localtime_r" != xyes],
+  [AC_MSG_FAILURE(
+   [Missing functions: localtime and localtime_r],
+   [1])
   ])
  
- AC_CHECK_FUNCS(
-  [mktime],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_mktime" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: mktime],
    [1])
@@ -271,30 +261,27 @@ AC_DEFUN([AC_CHECK_LOCAL_LIBSYSTEM],
  dnl Date and time functions used in libsystem/libsystem_date_time.h
  AC_CHECK_FUNC_CTIME
  
- AC_CHECK_FUNCS(
-  [gmtime_r],
-  [],
-  [AC_CHECK_FUNCS(
-   [gmtime],
-   [],
-   [AC_MSG_FAILURE(
-    [Missing functions: gmtime_r and gmtime],
-    [1])
-   ])
+ AC_CHECK_FUNCS([gmtime gmtime_r time])
+
+ AS_IF(
+  [test "x$ac_cv_func_gmtime" != xyes && test "x$ac_cv_func_gmtime_r" != xyes],
+  [AC_MSG_FAILURE(
+   [Missing functions: gmtime_r and gmtime],
+   [1])
   ])
  
- AC_CHECK_FUNCS(
-  [time],
-  [],
+ AS_IF(
+  [test "x$ac_cv_func_time" != xyes],
   [AC_MSG_FAILURE(
    [Missing function: time],
    [1])
   ])
  
  dnl Directory functions used in libsystem/libsystem_directory_io.h
- AC_CHECK_FUNCS(
-  [chdir],
-  [],
+ AC_CHECK_FUNCS([chdir])
+ 
+ AS_IF(
+  [test "x$ac_cv_func_chdir" != xyes],
   [AC_MSG_FAILURE(
    [Missing functions: chdir],
    [1])
